--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
+            <!-- Nav bar links to the content-->
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -29,7 +30,7 @@
 
     <main class="content">
         
-        <article class="search-engine-optimization">
+        <article id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="notebook surrounded by pencils, coffee mug, and a laptop" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
